# yahoo-finance-mcp-server

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_INFO.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  pyproject.toml  test_installation.sh
.github/workflows/: publish.yml  test.yml
src/yahoo_finance_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_server.py
