[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-finance-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Yahoo Finance data access"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Laxmi Kant Tiwari", email = "info@kgptalkie.com" }
]
keywords = ["mcp", "yahoo-finance", "finance", "stock-market", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=0.3.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/laxmimerit/yahoo-finance-mcp-server"
Documentation = "https://github.com/laxmimerit/yahoo-finance-mcp-server#readme"
Repository = "https://github.com/laxmimerit/yahoo-finance-mcp-server"
Issues = "https://github.com/laxmimerit/yahoo-finance-mcp-server/issues"

[project.scripts]
yahoo-finance-mcp-server = "yahoo_finance_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
