[project]
name = "yahoo-finance-mcp-server"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for Yahoo Finance data access"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Laxmi Kant Tiwari", email = "info@kgptalkie.com" }
]
keywords = ["mcp", "yahoo-finance", "finance", "stock-market", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=0.3.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/laxmimerit/yahoo-finance-mcp-server"
Repository = "https://github.com/laxmimerit/yahoo-finance-mcp-server"
Issues = "https://github.com/laxmimerit/yahoo-finance-mcp-server/issues"

# ============================================================================
# CUSTOM: MCP Server Entry Point
# Add this section to make the package executable as a command
# ============================================================================
[project.scripts]
yahoo-finance-mcp-server = "yahoo_finance_mcp_server.server:main"

# ============================================================================
# CUSTOM: Build Configuration
# Required for proper package structure with src/ layout
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_mcp_server"]
